# atum

./: CMakeLists.txt  README.md
include/: atum.hpp
